# DesignPatternsInModernCPP

./: CMakeLists.txt
singleton/configuration_5/: ConfigManager.cpp  ConfigManager.hpp  main.cpp
singleton/database_4/: DatabaseManager.cpp  DatabaseManager.hpp  main.cpp
singleton/logger_3/: Logger.cpp  Logger.hpp  main.cpp
singleton/modern_2/: SingletonModern.cpp  SingletonModern.hpp  main.cpp
singleton/simple_1/: Singleton.cpp  Singleton.hpp  main.cpp
